@@ -1,3 +1,11 @@
+2005-06-17  Not Zed  <NotZed@Ximian.com>
+
+	* message-list.c (regen_list_regen): try a different cancellation
+	test since we search iteratively now.
+	(ml_regen_timeout): try thread-new, so we can run without blocking
+	the loading of the next folder, so we can never be cancelled
+	anyway.  duh.
+
 2005-06-15  Not Zed  <NotZed@Ximian.com>
 
 	* mail-ops.c (expunge_folder_expunge): call sync w/ expunge.
